=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.98

   * fixed F10 action in external gui

   * added colors for each atomic element, plus deuterium

   * added 32 new automatic colors

   * fixed bugs with import pymol launch approach

   * fixed bug with TRJCONV multimodel PDB files

   * order command for managing entries in the control panel

   * P1M script format with embedded data & extra security

   * increased compatibility for variant MOL2 usage

   * various performance enhancements, esp. to MOL2 and SDF loads

   * fixed quiet setting for align function

   * surface optimize subsets setting

   * .pov file via save command

   * fixed bug with gadgetramp events

   * updated presets

   * cartoon_side_chain_helper setting

   * putty, and associated selections (thanks in part to Cameron Mura)

   * selection dots no longer fogged

   * new actions in the names list

   * fixed rare system crash on certain ATI Radeon hardware when
     picking or selecting atoms.

   * huge performance boost for large systems/heavily loaded PyMOL

   * ray_direct_shade setting 

   * adjusted povray camera and light settings

   * povray export now supports mesh2 -- no more need for MegaPOV.

   * performance increase for atom selections

   * updated output generated by PyMOL when loading various files...

   * rank as the final arbiter of atom sorts (if everything else matches)

   * handling of PDB files with mismatched SCALE and CRYST

   * special handling for CCP4 maps with missing symmetry blocks

   * long-term code changes: elimination of global state from PyMOL and
     allow for option of separating PyMOL graphics from Python top level

   * support for residue names and identifiers in mol2 files

   * dynamic grid for slice module

   * rank attribute for atoms ( = rank/row from input file)
