@@ -254,7 +254,7 @@ PYMOL API
       if thread.get_ident() ==pymol.glutThread:
          r = cmd._mpng(prefix,int(first)-1,int(last)-1)
       else:
-         r = _cmd.do('cmd._mpng("'+prefix+'","'+
+         r = cmd.do('cmd._mpng("'+prefix+'","'+
                      str(int(first)-1)+'","'+str(int(last)-1)+'")',0)
       return r
 
